--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>BrainSeed</title>
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
   </head>
   <body>
     <div id="root"></div>
