updated demo button, auth, routes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>BrainSeed</title>
+    <link rel="shortcut icon" id="favicon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
   </head>
   <body>
