--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <title>BrainSeed</title>
     <link rel="shortcut icon" id="favicon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
   </head>
   <body>
     <div id="root"></div>
